--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="grid items-center text-center mt-28 pb-12">
         <div>下载地址：</div>
         <div>
-          <a href="./release/windows/ipa_0.2.2_x64-setup.exe"
+          <a href="./release/windows/ipa_latest_x64-setup.exe"
             >Windows x86_64版本</a
           >
         </div>
