--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="w-screen min-h-screen overflow-y-scroll relative">
+    <div class="grid items-center">
+      <div><a href="/docs/">使用文档</a></div>
+    </div>
     <h1
       class="text-center animate__animated animate__backInDown animate__delay-1s pt-20 pb-12"
       style="font-size: 3rem"
