--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <title>智能个人助手</title>
-    <script src="/assets/bd_analytics.js"/>
-     
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="./assets/index.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/assets/bd_analytics.js"></script>
   </head>
   <body class="w-screen min-h-screen overflow-y-scroll relative">
     <div class="grid items-center">
